<resources>
    <string name="app_name">CountMeUp</string>
    <string name="SuggestedIP">87.155.152.34</string>
    <string name="SuggestedPort">8080</string>
    <string name="ServerInputLabelText">Input the ip address and port of your server</string>
    <string name="IPInputHint">Input your servers ip here</string>
    <string name="PortInputHint">Input the port of your server here</string>
    <string name="ConnectButtonLabel">Connect</string>
    <string name="title_activity_counter_list">CounterList</string>
    <string name="ServerConnectionError">Error connecting to server</string>
    <string name="preference_file_key">com.gustav.countmeup.PREFERENCE_FILE_KEY</string>
    <string name="DefaultCounterName">CounterName</string>
    <string name="DefaultCounterValue">42</string>
    <string name="DecrementButtonText">-</string>
    <string name="IncrementButtonText">+</string>
    <string name="HintForIntervalDisplay">Number to add/subtract</string>
    <string name="DefaultValueForDeltaValue">2</string>
    <string name="NewCounterAlertMessage">Give your new Counter a name and a starting value</string>
    <string name="NewCounterNameHint">Name of the counter</string>
    <string name="NewCounterValueHint">starting value for your counter</string>
    <string name="CancelButton">Cancel</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="DeleteButtonHint">Delete the counter</string>
    <string name="DeleteCounterMessage">Are you sure you want to delete</string>
    <string name="ConfirmDelete">Delete</string>
    <string name="InvalidNameMessage">Name can only contain uppercase lowercase numbers and whitespaces</string>
    <string name="NegativeDelta">Delta cannot be less then or equal to 0</string>
    <string name="DeltaMustBeNumber">Delta must be a small enough number</string>
</resources>
